dojo survey updated

--- a/projects/dojoSurvey/Views/Hello/Third.cshtml
+++ b/projects/dojoSurvey/Views/Hello/Third.cshtml
@@ -17,5 +17,14 @@
         }
     } 
     </h2>
+    <h2>My array:
+    @{
+        foreach(string j in ViewBag.MyArray2)
+        {
+            <p>@j</p>
+        }
+    } 
+    </h2>
+
 </body>
 </html>
